        - SD_route_get_communication_time => SG_route_get_latency() + amount / SD_route_get_bandwidth()
        - SD_workstation_get_computation_time => amount / sg_host_speed()
   - In Java
      - VM.setBound(int load) is now VM.setBound(double bound) to meet the MSG semantics. Use VM.getSpeed()*load/100 for the legacy behavior.

 XML platforms:
 * Switch to platform v4 format.
   - Rename from 'power' to 'speed' the attributes describing the amount of
     flops that a <host>, <peer>, <cluster> or <cabinet> can deliver per second.
   - In <trace_connect>, attribute kind="POWER" is now kind="SPEED".
   - In <host> and <link>, attributes availability and state are gone.
     It was redundent with state and availability traces, and with peak values.
   - The DOCTYPE points to the right URL:
     http://simgrid.gforge.inria.fr/simgrid/simgrid.dtd
     (the file at this address now documents the changelog since its v1)
   - A warning is emitted for unit-less values (they are still accepted).
     - speed. Default: 'f' or 'flops'. Also defined:
        'Yf',         'Zf',         'Ef',       'Pf',        'Tf',        'Gf',        'Mf',        'kf'
        'yottaflops', 'zettaflops', 'exaflops', 'petaflops', 'teraflops', 'gigaflops', 'megaflops', 'kiloflops'
     - bandwidth. Default: 'Bps' bytes per second (or 'bps' for bits but 1 Bps = 8 bps)
       Also defined in bytes: 'TiBps', 'GiBps', 'MiBps', 'KiBps', 'TBps', 'GBps', 'MBps', 'kBps', 'Bps'
       And the same in bits:  'Tibps', 'Gibps', 'Mibps', 'Kibps', 'Tbps', 'Gbps', 'Mbps', 'kbps', 'bps'
     - latency. Default: 's' second. Also defined:
       'w' week, 'd' day, 'h' hour, 'm' minute, 'ms' millisecond, 'us' microsecond, 'ns' nanosecond, 'ps' picosecond
       
 * bin/simgrid_update_xml can upgrade your files automatically (won't convert unit-less values)
   tools/sg_xml_unit_converter.py may help (but it's just a warning and will probably ever be).

 S4U