@@ -47,7 +47,7 @@ cd $WORKSPACE/build
 ### Proceed with the tests
 ctest -D ExperimentalStart || true
 
-cmake -Denable_documentation=OFF -Denable_lua=OFF -Denable_tracing=ON \
+cmake -Denable_documentation=OFF -Denable_lua=OFF  \
       -Denable_compile_optimizations=OFF -Denable_compile_warnings=ON \
       -Denable_jedule=OFF -Denable_mallocators=OFF \
       -Denable_smpi=ON -Denable_smpi_MPICH3_testsuite=OFF -Denable_model-checking=OFF \
@@ -65,7 +65,7 @@ fi
 make clean
 ctest -D ExperimentalStart || true
 
-cmake -Denable_documentation=OFF -Denable_lua=ON -Denable_java=ON -Denable_tracing=ON \
+cmake -Denable_documentation=OFF -Denable_lua=ON -Denable_java=ON \
       -Denable_compile_optimizations=OFF -Denable_compile_warnings=ON \
       -Denable_jedule=ON -Denable_mallocators=ON \
       -Denable_smpi=ON -Denable_smpi_MPICH3_testsuite=ON -Denable_model-checking=ON \
